--- a/bird_turret/stm32/protobird.ioc
+++ b/bird_turret/stm32/protobird.ioc
@@ -21,51 +21,51 @@ Mcu.IP1=FREERTOS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=UART5
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP5=TIM3
+Mcu.IP6=UART5
+Mcu.IP7=USART3
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC4
-Mcu.Pin11=PC5
-Mcu.Pin12=PB0
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PD8
-Mcu.Pin16=PD9
+Mcu.Pin10=PC5
+Mcu.Pin11=PB0
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PD8
+Mcu.Pin15=PD9
+Mcu.Pin16=PG3
 Mcu.Pin17=PG6
 Mcu.Pin18=PG7
-Mcu.Pin19=PC8
+Mcu.Pin19=PC6
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PC12
-Mcu.Pin28=PD2
-Mcu.Pin29=PG11
+Mcu.Pin20=PC8
+Mcu.Pin21=PC9
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PC12
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PG13
-Mcu.Pin31=PB7
-Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin33=VP_SYS_VS_tim6
-Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PD2
+Mcu.Pin31=PG11
+Mcu.Pin32=PG13
+Mcu.Pin33=PB7
+Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin35=VP_SYS_VS_tim6
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA7
-Mcu.PinsNb=36
+Mcu.Pin8=PA7
+Mcu.Pin9=PC4
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -124,7 +124,6 @@ PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
-PA3.Signal=S_TIM2_CH4
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
@@ -184,7 +183,11 @@ PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.Locked=true
+PC6.Signal=S_TIM3_CH1
 PC8.Signal=S_TIM3_CH3
+PC9.Locked=true
+PC9.Signal=S_TIM3_CH4
 PD2.Mode=Asynchronous
 PD2.Signal=UART5_RX
 PD8.GPIOParameters=GPIO_Label
@@ -207,6 +210,10 @@ PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
+PG3.GPIOParameters=GPIO_PuPd
+PG3.GPIO_PuPd=GPIO_NOPULL
+PG3.Locked=true
+PG3.Signal=GPIO_Output
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -253,7 +260,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_UART5_Init-UART5-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_UART5_Init-UART5-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -323,22 +330,25 @@ RCC.VcooutputI2SQ=192000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
-SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
-TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,Pulse-PWM Generation4 CH4
-TIM2.Period=6000-1
-TIM2.Prescaler=280-1
-TIM2.Pulse-PWM\ Generation4\ CH4=450-1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation3 CH3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period,Pulse-PWM Generation3 CH3,Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Channel-PWM Generation4 CH4,Pulse-PWM Generation4 CH4
 TIM3.Period=6000-1
 TIM3.Prescaler=280-1
+TIM3.Pulse-PWM\ Generation1\ CH1=450-1
 TIM3.Pulse-PWM\ Generation3\ CH3=450-1
-UART5.IPParameters=VirtualMode
+TIM3.Pulse-PWM\ Generation4\ CH4=450-1
+UART5.IPParameters=VirtualMode,WordLength,Parity
+UART5.Parity=PARITY_NONE
 UART5.VirtualMode=Asynchronous
+UART5.WordLength=WORDLENGTH_8B
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -347,8 +357,6 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F429ZI
