--- a/bird_turret/stm32/protobird.ioc
+++ b/bird_turret/stm32/protobird.ioc
@@ -7,9 +7,10 @@ ETH.MediaInterface=HAL_ETH_RMII_MODE
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 ETH.PHY_Value=0
 ETH.PhyAddress=0
-FREERTOS.BinarySemaphores01=phiDirSem,Dynamic,NULL,Available;thetaDirSem,Dynamic,NULL,Available;triggerSem,Dynamic,NULL,Depleted;trigendSem,Dynamic,NULL,Depleted;moveSem,Dynamic,NULL,Depleted;moveendSem,Dynamic,NULL,Depleted
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,BinarySemaphores01
-FREERTOS.Tasks01=uartTask,0,128,StartUartTask,Default,NULL,Dynamic,NULL,NULL;motorTask,0,128,StartMotorTask,Default,NULL,Dynamic,NULL,NULL;trigTask,2,128,StartTrigTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.BinarySemaphores01=cooldownSem,Dynamic,NULL,Available
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT,BinarySemaphores01
+FREERTOS.Tasks01=uartTask,0,128,StartUartTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -21,11 +22,12 @@ Mcu.IP1=FREERTOS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=UART5
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=UART5
+Mcu.IP8=USART3
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -58,14 +60,15 @@ Mcu.Pin32=PG13
 Mcu.Pin33=PB7
 Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin35=VP_SYS_VS_tim6
-Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -84,6 +87,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true\:false
+NVIC.TIM2_IRQn=true\:5\:0\:false\:true\:true\:3\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
@@ -260,7 +264,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_UART5_Init-UART5-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_UART5_Init-UART5-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -336,6 +340,9 @@ SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=30000-1
+TIM2.Prescaler=2800-1
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
@@ -357,6 +364,8 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F429ZI
